--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 .idea/**/tasks.xml
 .idea/dictionaries
 
+node_modules/
 # Sensitive or high-churn files:
 .idea/**/dataSources/
 .idea/**/dataSources.ids
