--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch":"nodemon --exec 'npm test' "
+    "test-watch": "nodemon --exec 'npm test' "
   },
   "engines": {
     "node": "6.10.2"
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.15.3",
+    "moment": "^2.18.1",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
